--- a/mogadu/Views/LogInView.xaml
+++ b/mogadu/Views/LogInView.xaml
@@ -6,7 +6,19 @@
         xmlns:local="clr-namespace:mogadu.Views"
         mc:Ignorable="d"
         Title="mogadu" Height="450" Width="550" DataContext="~/Viewmodels/LoginViewModel.cs">
-    
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
+                <!-- Accent and AppTheme setting -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -18,15 +30,15 @@
             <RowDefinition Height="20px"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <Image Source="/Resources/mogadu.png" Grid.Row="0" />
+        <Image Source="/Resources/icon.png" Grid.Row="0" />
         <Label Content="mogadu" Grid.Row="1" HorizontalAlignment="Center" FontSize="13px" Margin="242,0,242,58" Width="58" Foreground="DarkGray" Grid.RowSpan="2"></Label>
         <Grid Grid.Row="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="1.3*"></RowDefinition>
                 <RowDefinition Height="2*"></RowDefinition>
             </Grid.RowDefinitions>
-
-            <ComboBox Grid.Row="0" ItemsSource="{Binding Mitarbeiters}" SelectedItem="{Binding SelectedMitarbeiter}" Height="30px" Width="270px">
+            <Label Content="Benutzer:" HorizontalAlignment="Center" Grid.Row="0"></Label>
+            <ComboBox Grid.Row="1" ItemsSource="{Binding Mitarbeiters}" SelectedItem="{Binding SelectedMitarbeiter}" Height="30px" Width="270px" TabIndex="0">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Horizontal">
@@ -43,8 +55,13 @@
                 <RowDefinition Height="2*"></RowDefinition>
             </Grid.RowDefinitions>
             <Label Content="Password:" HorizontalAlignment="Center"></Label>
-            <PasswordBox Grid.Row="1" Background="LightGray" Height="30px" Width="270px" x:Name="PasswortBox"></PasswordBox>
+            <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center" Margin="32,0,0,0">
+                <PasswordBox Grid.Row="1" Background="LightGray" Height="30px" Width="267" x:Name="PasswortBox" TabIndex="1">
+
+                </PasswordBox>
+                <Image Margin="10,0,0,0" Source="pack://application:,,,/Resources/warning.png" Height="22" Visibility="{Binding HasError}"></Image>
+            </StackPanel>
         </Grid>
-        <Button Grid.Row="4" Content="Login" Width="100px" Height="24px" Background="DarkGray" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=PasswortBox}"></Button>
+        <Button TabIndex="2" Grid.Row="4" Content="Login" Width="100px" Height="24px" Background="DarkGray" Command="{Binding LoginCommand}" CommandParameter="{Binding ElementName=PasswortBox}"></Button>
     </Grid>
 </Window>
